# WebChat

./: .gitignore  README.md  pyproject.toml  vercel.json
BackEnd/: .envrc  custom_args.py  input.py  main.py  prompts.py  pyproject.toml  pyrightconfig.json  response.py  server.py
FrontEnd/: package-lock.json  package.json
FrontEnd/app/: error-boundary.tsx  globals.css  layout.tsx  message-bubble.tsx  page.tsx
api/: index.py  requirements.txt
api/backend/: prompts.py  response.py
backend/: prompts.py
