[project]
name = "webchat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.138.2",
    "openai>=2.44.0",
    "rich>=15.0.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "ruff>=0.15.20",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
